Fixing table layout.  (Maybe?) (#1482)
* Fixing table layout.  (Maybe?)

* Adding missing newline

* Adjusting z-index to fix icon overlap issues

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -3611,3 +3611,15 @@ a[href*="#no-click"], img[src*="#no-click"] {
   margin-bottom: 40px;
 }
 
+/* CSS hacks - Aug 2021 */
+.root {
+  display: none;
+}
+
+article section.page table {
+  table-layout: auto !important;
+}
+
+.gdpr-modal {
+  z-index: 9999;
+}
